--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,16 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.1.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.1.6.RELEASE</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
