Config jwt properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 #URL para acessar o console web
 spring.h2.console.path=/h2
+
+
+
+security.oauth2.resource.filter-order=3
+
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=WaterClock
+
+security.jwt.client-id=testjwtclientid
+security.jwt.client-secret=XY7kmzoNzl100
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=testjwtresourceid
