Auth api working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.h2.console.enabled=true
 #URL para acessar o console web
 spring.h2.console.path=/h2
 
-
+logging.level.org.springframework.web=DEBUG
+spring.http.log-request-details=true
 
 security.oauth2.resource.filter-order=3
 
