Create 2 spring profiles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,10 @@
+spring.profiles.active=@activatedProperties@
 
-#URL de acesso ao banco, neste caso um arquivo chamado fiap
-spring.datasource.url=jdbc:h2:file:~/fiap
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-# Console Web Habilitado
-spring.h2.console.enabled=true
-#URL para acessar o console web
-spring.h2.console.path=/h2
-
-logging.level.org.springframework.web=DEBUG
-spring.http.log-request-details=true
 
 security.oauth2.resource.filter-order=3
-
-security.signing-key=MaYzkSjmkzPC57L
 security.encoding-strength=256
 security.security-realm=WaterClock
-
-security.jwt.client-id=testjwtclientid
-security.jwt.client-secret=XY7kmzoNzl100
 security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
