load admin credentials via aplication.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,3 +16,5 @@ security.signing-key=MaYzkSjmkzPC57L
 security.jwt.client-id=testjwtclientid
 security.jwt.client-secret=XY7kmzoNzl100
 
+waterclock.admin.username=test@test.com
+waterclock.admin.password=test
