--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,3 +9,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 security.signing-key=${JWT_SIGNING_KEY}
 security.jwt.client-id=${JWT_CLIENT_ID}
 security.jwt.client-secret=${JWT_CLIENT_SECRET}
+
+waterclock.admin.username=${ADMIN_USERNAME}
+waterclock.admin.password=${ADMIN_PASSWORD}
