--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
+            <version>6.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
