Protect mqtt credentials

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+mqtt.username=${MQTT_USERNAME}
+mqtt.password=${MQTT_PASSWORD}
