--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,21 +1,21 @@
 #URL de acesso ao banco, neste caso um arquivo chamado fiap
-spring.datasource.url=jdbc:h2:file:~/fiap
+#spring.datasource.url=jdbc:h2:file:~/fiap
 #spring.datasource.url=jdbc:h2:~/fiap;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Console Web Habilitado
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 #URL para acessar o console web
-spring.h2.console.path=/h2
+#spring.h2.console.path=/h2
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url=jdbc:postgresql://localhost:5433/waterclock
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5433/waterclock
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
